--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "NODE_ENV=development nodemon src/index.js",
     "lint": "eslint .",
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node src/index.js",
+    "test": "NODE_ENV=test jest --verbose --silent"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +18,18 @@
     "mongoose": "6.0.12"
   },
   "devDependencies": {
+    "jest": "27.3.1",
     "nodemon": "2.0.14",
-    "standard": "16.0.4"
+    "standard": "16.0.4",
+    "supertest": "6.1.6"
   },
   "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json"
+    "extends": "./node_modules/standard/eslintrc.json",
+    "env": {
+      "jest": true
+    }
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
